--- a/Final_Project.Rmd
+++ b/Final_Project.Rmd
@@ -13,6 +13,11 @@ library(mdsr)
 ```{r}
 terrorism <- read.csv("globalterrorismdb.csv")
 econData <- read.csv("WEO_Data copy.csv")
+```
+
+```{r}
+indicators <- read.csv("indicators_csv.csv")
+values <- read.csv("values_csv.csv")
 
 ```
 
@@ -26,23 +31,6 @@ terrorism %>%
   group_by(country_txt) %>%
   summarise(count = n()) %>%
   arrange(desc(count))
-
-```
-
-```{r}
-terrorism %>%
-  ggplot(aes(x = longitude, y = latitude)) +
-  geom_point()
-
-```
-
-```{r}
-terrorism %>%
-  filter(country_txt == "United States") %>%
-  filter(longitude < 0) %>%
-  filter(nkillus > 0) %>%
-  ggplot(aes(x = longitude, y = latitude)) +
-  geom_point(aes(color = nkillus))
 
 ```
 
