--- a/New final project.Rmd
+++ b/New final project.Rmd
@@ -23,13 +23,13 @@ econData <- read.csv("WEO_Data.csv")
 
 ```{r}
 # Creating 
-country_terrorism_deaths <-
+terrorism_deaths <-
   terrorism %>%
   group_by(country_txt) %>%
   summarise(attacks = n(), deaths = sum(na.omit(nkill))) %>%
   arrange(desc(deaths))
 
-country_terrorism_deaths
+terrorism_deaths
 ```
 
 
@@ -96,7 +96,7 @@ create_deaths_table <- function(x, y){
   econAverages %>%
     filter(Subject.Descriptor == x, Units == y) %>%
     rename("country_txt" = "Country") %>%
-    left_join(country_terrorism_deaths, by = "country_txt") %>%
+    left_join(terrorism_deaths, by = "country_txt") %>%
     rename("Country" = "country_txt")
 }
 
@@ -128,7 +128,6 @@ InflationDeaths
 SpendingDeaths <- create_deaths_table("General government total expenditure",
                                       "Percent of GDP")
 SpendingDeaths
-
 ```
 
 ```{r}
@@ -137,5 +136,34 @@ ImportDeaths <- create_deaths_table("Volume of imports of goods and services",
                                     "Percent change")
 ImportDeaths
 
+```
+
+```{r}
+YearEconData <-
+  econDataTidy %>%
+  filter(Subject.Descriptor == "Population") 
+
+year_terrorism_deaths <-
+  terrorism %>%
+  group_by(iyear) %>%
+  filter(iyear >= 1999) %>%
+  summarise(attacks = n(), deaths = sum(na.omit(nkill))) %>%
+  rename("Year" = "iyear") %>%
+  arrange(Year)
+
+YearEconData
+year_terrorism_deaths
+
+YearEconDataClean <-
+  YearEconData %>%
+  mutate(Year = as.numeric(gsub("X", "", Year))) %>%
+  group_by(Year) %>%
+  filter(Year <= 2017) %>%
+  summarise(worldPop = sum(na.omit(Value)))
+
+ggplot(data = year_terrorism_deaths, aes(x = Year, y = attacks)) +
+  geom_point(color = "red", shape = 15) + geom_line(color = "red") +
+  geom_point(aes(x = Year, y = worldPop), color = "blue", data = YearEconDataClean) +
+  geom_line(aes(x = Year, y = worldPop), color = "blue", data = YearEconDataClean)
 ```
 
