--- a/New final project.Rmd
+++ b/New final project.Rmd
@@ -118,7 +118,7 @@ create_deaths_table <- function(x, y){
   econAverages %>%
     filter(Subject.Descriptor == x, Units == y) %>%
     rename("country_txt" = "Country") %>%
-    left_join(terrorism_deaths, by = "country_txt") %>%
+    left_join(terrorism, by = "country_txt") %>%
     rename("Country" = "country_txt")
 }
 
@@ -187,16 +187,21 @@ ggplot(data = year_terrorism_deaths, aes(x = Year, y = attacks)) +
 ```
 
 ```{r}
-ytdtop25 <-
+ytd2 <- year_terrorism_deaths[-c(1)]
+
+ytd2 <-
+  ytd2 %>%
+  select(attacks, deaths) %>%
+  arrange(desc(attacks)) %>%
+  head(25)
+
+ytd_top_25 <-
   year_terrorism_deaths %>%
   arrange(desc(attacks)) %>%
   head(25)
 
-ytd2 <- ytdtop25[-c(1)]
-
 ytd_std <-
-  ytd2 %>%
-  scale(ytd2)
+  scale(ytd2) %>%
   as.data.frame()
 
 ytd_dist <- dist(ytd_std)
@@ -205,7 +210,7 @@ ytd_dendo <-
   ytd_dist %>%
   hclust(method = "complete")
 
-labels <- ytdtop25$country_txt
+labels <- ytd_top_25$country_txt
 
 ytd_dendo %>%
   plot(cex = 0.9, labels = labels, lwd = 2,
