--- a/New final project.Rmd
+++ b/New final project.Rmd
@@ -324,7 +324,8 @@ YearEconDataClean <-
 ggplot(data = year_terrorism_deaths, aes(x = Year, y = attacks)) +
   geom_point(color = "red", shape = 15) + geom_line(color = "red") +
   geom_point(aes(x = Year, y = worldPop), color = "blue", data = YearEconDataClean) +
-  geom_line(aes(x = Year, y = worldPop), color = "blue", data = YearEconDataClean)
+  geom_line(aes(x = Year, y = worldPop), color = "blue", data = YearEconDataClean) +
+  ylab("Attacks/World Population")
 ```
 
 ```{r}
@@ -358,5 +359,20 @@ td_dendo %>%
        main = "Countries with Most Terrorist Attacks")
 ```
 
+```{r}
+Top_6_Countries <-
+  terrorism %>%
+  filter(country_txt == "Iraq" | country_txt == "Pakistan" | 
+         country_txt == "Afghanistan" | country_txt == "India" | 
+         country_txt == "Colombia" | country_txt == "Philippines") %>%
+  group_by(country_txt, iyear) %>%
+  summarise(Attacks = n())
+
+Top_6_Countries %>%
+  ggplot(aes(x = iyear, y = Attacks)) +
+  geom_point() + geom_line() +
+  facet_wrap(~country_txt)
+
+```
 
 
