--- a/WestfallSchaeffer_FinalProj_GuidanceDoc.Rmd
+++ b/WestfallSchaeffer_FinalProj_GuidanceDoc.Rmd
@@ -17,7 +17,7 @@ output: html_notebook
 *Description: Report includes meaningful contributions from (at least) two different data sources that are JOINED for the analysis*
 
 (A) .Rmd Line number(s) for join operation: 
-Line 111 (within function)
+Line 220 (within function)
 
 
 ### Data Wrangling (5 of 6 required)
@@ -25,38 +25,38 @@ Line 111 (within function)
 *Description: Clear demonstration of proficiency should include proper use of 5 out of the following 6 topics from class: (+) general purpose data wrangling--e.g., filter, select mutate, summarise, arrange, group_by, etc. (+) spread & gather to stack/unstack variables (+) regular expressions (+) user-defined functions (+) loops and control flow (+) vectorized functions like the `apply` family, `purrr::map` or `dplyr::do`*
 
 (A) .Rmd Line number(s) for an example of general purpose data wrangling: 
-Lines 25-29
+Lines 42-46 or pretty much anywhere
 
 (B) .Rmd Line number(s) for a spread & gather (or equivalent): 
-Lines 73-75
+Line 57 and Line 193
 
 (C) .Rmd Line number(s) for use of regular expressions: 
-Line 158
+Line 439
 
 (D) .Rmd Line number(s) for use of user-defined functions: 
-Lines 107-113
+Lines 216-224
 
 (E) .Rmd Line number(s) for use of loops and/or control flow: 
 
 
 (F) .Rmd Line number(s) for use of vectorized functions: 
-Line 55
+Line 171
 
 ### Data Visualization (all 4 required)
 
 *Description: Clear demonstration of proficiency should include at least FOUR distinct and useful data visualizations that are relevant to purpose of the analysis. Include at least one effective visualization with layered data from distinct data structures--e.g., a `geom` that plots data from a secondary data frame AND another must effectively display many--3 or more--variables. All plots must demonstrate good plotting practices.*
 
 (A) .Rmd Line number(s) for visualization with layered data from distinct data structures--e.g., a `geom` that plots data from a secondary data frame: 
-Lines 163-166
+Lines 444-449
 
 (B) .Rmd Line number(s) for visualization displaying many--3 or more--variables (A, B, C, & D must be four **different** plots): 
-
+Lines 145-150 or Lines 156-162
 
 (C) .Rmd Line number(s) for a third visualization: 
-Lines 38-41
+Lines 145-150 or Lines 156-162
 
 (D) .Rmd Line number(s) for a third visualization: 
-
+Lines 94-98
 
 
 
@@ -65,16 +65,16 @@ Lines 38-41
 *Description: Clear demonstration of proficiency should include proper use of 3 out of the following 4 topics from class: (+) statistical modeling/supervised learning (+) unsupervised learning (+) user-defined simulations (+) analysis of text data (+) R tools for "big data"*
 
 (A) .Rmd Line number(s) for statistical modeling/supervised learning:  
-
+Most of Lines 238-418
 
 (B) .Rmd Line number(s) for unsupervised learning: 
-
+Lines 104-131
 
 (C) .Rmd Line number(s) for user-defined simulation(s): 
 
 
 (D) .Rmd Line number(s) for analysis of text data: 
-
+Lines 53-89
 
 (E) .Rmd Line number(s) for R tools for "big data": 
 
